# housing-price

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements-app.txt
app/: app.py
artifacts/: model.pkl  preprocessor.pkl
data/: submission.csv
notebook/: EDA.ipynb  Training.ipynb
src/: exception.py  logger.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/pipeline/: predict_pipeline.py
